# ida-chat-native

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/: api_client.cpp  api_client.h  chat_widget.cpp  chat_widget.h  config.cpp  config.h  plugin.cpp  plugin.h  tool_definitions.cpp  tool_definitions.h  tool_executor.cpp  tool_executor.h  worker_thread.cpp  worker_thread.h
